# sb-drift-experiments

./: .gitattributes  .gitignore  FINAL_ARTIFACTS.md  LICENSE  README.md  pyproject.toml  remake_rate_figures_v2.py  requirements.txt
configs/: common.yaml  gg_1d.yaml  gg_2d.yaml  mm_1d.yaml  mm_1d_stress_wide_strong.yaml  mm_2d.yaml
figures/: edge_summary.md
figures/plot_data/: edge_plot_data.json
paper_figure_upload/plot_data/: edge_summary.md  rates_gg_ise_source.csv  rates_gg_source.csv  rates_mm_ise_source.csv  rates_mm_source.csv
results/: README.md
results/processed/adapt_final/: ADAPTIVITY_PROTOCOL.md  adapt_dense_floor81_20260417_192238_perM.csv  adapt_dense_floor81_20260417_192238_summary.csv  adapt_floor_confirm81_20260417_190520_perM.csv  adapt_floor_confirm81_20260417_190520_summary.csv  adapt_floor_confirm81_20260417_190520_vs_adapt_dense_floor81_20260417_192238_sharedM.csv  adaptivity_constants_table.tex  bandwidth_diagnostics_table.tex
results/processed/clt/gg_1d/: run_config.json  (+2 more)
results/processed/final_snapshots/: gg1_clt_final.md  preflight_mm1.md
results/processed/preflight/: gg_1d.json  gg_1d.md  gg_2d.json  gg_2d.md  mm_1d.json  mm_1d.md  mm_2d.json  mm_2d.md  summary.json  summary.md
scripts/: 00_preflight.py  01_rate.py  01_rate.py.bak_20260415_154136  01_rate.py.bak_20260415_160424  02_clt.py  03_edge.py  03_stress_summary_raw_only.py  redo_paper_figures.py
src/sb_drift_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sbdrift/: estimator.py  kernels.py  models.py  truth_engine.py  utils.py
(+324 files in other folders)
